--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.3.0",
+    "infinite-react-carousel": "^1.2.11",
     "react": "^16.14.0",
     "react-autosize-textarea": "^7.1.0",
+    "react-awesome-modal": "^2.0.5",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.14.0",
+    "react-elastic-carousel": "^0.9.0",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scrollbars-custom": "^4.0.25",
+    "react-shadow-scroll": "^2.1.0",
     "react-toastify": "^6.0.9",
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3"
