--- a/package.json
+++ b/package.json
@@ -3,29 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.4",
+    "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "apollo-boost": "^0.4.9",
-    "graphql": "^15.3.0",
+    "graphql": "^15.4.0",
     "infinite-react-carousel": "^1.2.11",
-    "react": "^16.14.0",
+    "react": "^17.0.1",
     "react-autosize-textarea": "^7.1.0",
     "react-awesome-modal": "^2.0.5",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.14.0",
-    "react-elastic-carousel": "^0.9.0",
+    "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.9.3",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-scrollbars-custom": "^4.0.25",
-    "react-shadow-scroll": "^2.1.0",
+    "react-scripts": "4.0.0",
     "react-toastify": "^6.0.9",
-    "styled-components": "^5.2.0",
-    "styled-reset": "^4.2.3"
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +33,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
