--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apollo-boost": "^0.4.9",
+    "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.1",
     "react-autosize-textarea": "^7.1.0",
     "react-awesome-modal": "^2.0.5",
+    "react-bootstrap": "^1.4.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.9.3",
@@ -34,8 +36,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0"
   }
 }
